Added user management section in admin with role management, permissions management, and role permissions management. Made the sort_column parameter of the EditTable constructor optional so datasets without a sort column can be plugged into the object. Fixed prebaked HTML in the EditTable object. Added form tokens to prevent CSRF attacks on EditTable objects. Added configuration variables accordingly.

--- a/public/assets/modules/admin/styles/default/css/framework/Form.css
+++ b/public/assets/modules/admin/styles/default/css/framework/Form.css
@@ -38,7 +38,7 @@ li.label {
     padding-right: 10px;
 }
 
-div.form_errors {
+div.form_errors, div.form_confirmations {
     margin: 5px 10px 5px 10px;
     border: 1px solid #CCCCCC;
     padding: 10px;
